# hri-mixed-reality

./: .gitignore  README.md
HoloLens/: README.md
ROS/: README.md
ROS/iiwa_stack/iiwa_description/launch/: iiwa14_upload.launch
ROS/iiwa_stack/iiwa_description/urdf/: iiwa14.urdf.xacro
ROS/ik_solver/: CMakeLists.txt  package.xml
ROS/ik_solver/launch/: iiwa_base.launch  solvers.launch  ur_base.launch
ROS/ik_solver/msg/: PoseState.msg  PoseStateArray.msg
ROS/ik_solver/script/: moveit_iiwa.py  moveit_ur.py  sender_iiwa.py  sender_ur.py  udp_control.py  udp_receiver.py  udp_receiver_ext.py
ROS/ik_solver/src/: debug_settings.h  iiwa_calc.cpp  topics.h  ur_calc.cpp
ROS/ik_solver/src/kinematics/: homogenous.cpp  homogenous.h  saturation_in_null_space.h
ROS/ik_solver/src/kuka/: iiwa_kinematics.cpp  iiwa_kinematics.h  kuka_settings.h  kuka_state.h  ros_iiwa_link.cpp  ros_iiwa_link.h
ROS/ik_solver/src/ur/: ur_kinematics.cpp  ur_kinematics.h  ur_link.cpp  ur_link.h  ur_settings.h  ur_state.h
ROS/java_sunrise/: test_sender.py
ROS/java_sunrise/udpControl/: .StateSender.java.swp  StateSender.java  UdpControl.java
